Contact form nodemailer.

--- a/business-landingpage/backend/.env
+++ b/business-landingpage/backend/.env
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://jorwin2002:UXyJRyOR5NQsNfH6@orllc-cluster.4splt.mongodb.net/?retryWrites=true&w=majority&appName=orllc-cluster
 PORT=5000
+
+CONTACT_EMAIL=Orlandscaping6@gmail.com
+CONTACT_PASS=your_app_specific_password
